2011-06-30  Mike Frysinger  <vapier@gentoo.org>

  * include/urjtag/bfin.h (bfin_part_data.emu_oab): Constify.
    (bfin_emu_oab): Delete external decl.
  * src/bfin/bfin-part-bfin.c (bfin_emu_oab): Constify & localize.
  * src/bfin/bfin.c (bfin_emu_wait_ts): Constify.

  * src/bus/mpc824x.c (BUS_WIDTH, REVBITS, dbgAddr, dbgData): Push
    global data down into bus-specific params data.

2011-07-01  Jie Zhang  <jie.zhang@analog.com>

  * src/lib/ansidecl.h: Move to include.
  * src/lib/filenames.h: Likewise.
  * src/lib/libiberty.h: Likewise.
  * src/lib/safe-ctype.h: Likewise.
  * src/lib/hex.c: Import from GCC.
  * src/lib/Makefile.am (libiberty_sources): Remove ansidecl.h,
    filenames.h, libiberty.h and  save-ctype.h.
    (libjtaglib_la_SOURCES): Add hex.c.
  * include/Makefile.am: New file.
  * Makefile.am (SUBDIRS): Add include.
  * src/global/data_dir.c (make_relative_prefix): Don't declare.
    Include libiberty.h.

  * src/lib/hex.c (hex_init): Avoid redundant initialization.

2011-06-30  Mike Frysinger  <vapier@gentoo.org>

  * cmd/cmd_initbus.c (cmd_initbus_complete): Complete bus parameters too.

  * include/urjtag/cable.h, src/tap/cable.c (urj_tap_cable_find): Add new
    helper for looking up cable drivers by name.
  * src/cmd/cmd_cable.c (cmd_cable_run): Use new helper to restore cable
    specific help output.
  * src/tap/chain.c (urj_tap_chain_connect): Replace look up code with new
    urj_tap_cable_find helper.

  * src/cmd/cmd.h, src/cmd/cmd_cmd.c (urj_completion_mayben_add_param_list):
    Add new helper which automatically adds urj_param_list_t for matches.
  * src/cmd/cmd_cable.c (cmd_cable_complete): Use new helper to add cable
    options to possible matches.
  * cmd/cmd_initbus.c (cmd_initbus_complete): Use new helper rather than
    adding parameters ourselves.

  * include/urjtag/params.h, src/global/params.c (urj_param_init_list): Add
    new helper for creating a parameter list based on a param_list.